# zed

./: Cargo.toml
crates/global_overlay/: Cargo.toml
crates/global_overlay/src/: global_overlay.rs
crates/gpui/src/: platform.rs  window.rs
crates/gpui_linux/src/linux/x11/: window.rs
crates/gpui_macos/src/: window.rs
crates/gpui_windows/src/: window.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs
