[package]
name = "global_overlay"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/global_overlay.rs"

[dependencies]
anyhow.workspace = true
futures.workspace = true
gpui.workspace = true
log.workspace = true
parking_lot.workspace = true
util.workspace = true
workspace.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
cocoa.workspace = true
objc.workspace = true
block = "0.1.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13.1", features = [
    "allow-unsafe-code",
    "xkb",
] }
